--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<style>
 		body{
 			margin-top: 70px;
-			background:#333;
-			color:#fff; 
+			 /* background:#333;
+			color:#fff; */
 		}
 
 	</style>
@@ -23,13 +23,10 @@
 </head>
 
 <body>
-
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6">
-
 			<h1 class="display-4 text-center mb-3">Weight Converter </h1>	
-
 			<form>
 				<div class="form-group">
 					<input 
@@ -39,9 +36,7 @@
 					placeholder="Enter Pounds.. ">
 				</div>
 			</form>	
-
 		<div id="output">
-
 			<div class="card card-primary mb-2">
 				<div class="card-block">
 					<h4>Grams:</h4>
@@ -64,12 +59,27 @@
 				</div>
 			</div>
 		</div>		
-
 			</div>
 		</div>
 	</div>	
 
+	<script >
 
+		document.getElementById('output').style.visibility = "hidden";
+		document.getElementById('lbsInput').addEventListener('input', function(e){
+			document.getElementById('output').style.visibility = "visible";
+	
+			let lbs = e.target.value;
+
+			document.getElementById('gramsOutput').innerHTML = lbs/0.0022046;
+			document.getElementById('kgOutput').innerHTML = lbs/2.2046;
+			document.getElementById('ozOutput').innerHTML = lbs*16;
+
+
+
+		});
+
+	</script>
 </body>
 
 </html>
